--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -790,16 +790,16 @@
                         <h6><i class="flaticon-star"></i><span>Leaders</span></h6>
                         <h2>Heads of Departments</h2>
                         <div class="title-shape"></div>
-                        <a href="#" class="theme-btn">All members</a>
+                        <a href="{% url 'nimr_web:team' %}" class="theme-btn">All members</a>
                     </div>
                     <div class="row clearfix">
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/amos.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/amos.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Dr. Amos Kahwa</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Amos Kahwa</a></h4>
                                             <span class="designation">Head of Research</span>
                                         </div>
                                     </div>
@@ -809,10 +809,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="200ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/esther.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/esther.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Dr. Esther Ngadaya</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Esther Ngadaya</a></h4>
                                             <span class="designation">Head Monitoring & Control</span>
                                         </div>
                                     </div>
@@ -822,10 +822,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="400ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/kilale.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/kilale.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Dr. Andrew Kilale</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Dr. Andrew Kilale</a></h4>
                                             <span class="designation">Head HRITD</span>
                                         </div>
                                     </div>
@@ -835,10 +835,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/range.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/range.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">DR. Nyagosya Range</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">DR. Nyagosya Range</a></h4>
                                             <span class="designation">Head Laboratory</span>
                                         </div>
                                     </div>
@@ -848,10 +848,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/mbuguni.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/mbuguni.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Patrick Mbuguni</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Patrick Mbuguni</a></h4>
                                             <span class="designation">Head Finance</span>
                                         </div>
                                     </div>
@@ -861,10 +861,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/jane.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/jane.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Jane Tungu</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Jane Tungu</a></h4>
                                             <span class="designation">Administration</span>
                                         </div>
                                     </div>
@@ -874,10 +874,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 team-block">
                             <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <figure class="image-box"><a href="#"><img src="{% static 'assets/images/team/rose.jpg' %}" alt=""></a></figure>
+                                    <figure class="image-box"><a href="{% url 'nimr_web:team' %}"><img src="{% static 'assets/images/team/rose.jpg' %}" alt=""></a></figure>
                                     <div class="lower-content">
                                         <div class="author-box">
-                                            <h4><a href="#">Rose Tendeka</a></h4>
+                                            <h4><a href="{% url 'nimr_web:team' %}">Rose Tendeka</a></h4>
                                             <span class="designation">Head PMU</span>
                                         </div>
                                     </div>
