--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -258,17 +258,18 @@
                 <div class="auto-container">
                     <div class="top-inner clearfix">
                         <div class="left-column pull-left clearfix">
-                            <div class="weathre-box"><i class="flaticon-sunny-day-or-sun-weather"></i><a href="#">{% now "jS F Y" %} </a></div>
+                            <div class="weathre-box"><i
+                                    class="flaticon-sunny-day-or-sun-weather"></i><strong><a href="#">{% now "jS F Y" %} </a></strong></div>
                             <ul class="links-box clearfix">
-                                <li><a href="http://www.nimr.or.tz/">NIMR HQ</a></li>
-                                <li><a href="https://www.moh.go.tz/en/">MOH</a></li>
-                                <li><a href="#">FAQ</a></li>
+                                <li><strong><a href="http://www.nimr.or.tz/">NIMR HQ</a></strong></li>
+                                <li><strong><a href="https://www.moh.go.tz/en/">MOH</a></strong></li>
+                                <li><strong><a href="https://mail.nimr.or.tz/">STAFF MAILS</a></strong></li>
                             </ul>
                         </div>
                         <div class="right-column pull-right clearfix">
                             <ul class="info-list clearfix">
-                                <li><i class="flaticon-phone-with-wire"></i><a href="tel:255222152232">+255-22-2152232</a></li>
-                                <li><i class="flaticon-fast"></i><a href="#"> 08:00 to 16:00</a></li>
+                                <li><i class="flaticon-phone-with-wire"></i><strong><a href="tel:255222152232">+255-22-2152232</a></strong></li>
+                                <li><i class="flaticon-fast"></i><strong><a href="#"> 08:00 to 16:00</a></strong></li>
                             </ul>
                             <ul class="social-links clearfix">
                                 <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
@@ -570,7 +571,7 @@
                             <div class="service-block-one wow fadeInLeft animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:research' %}">Research Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="{% url 'nimr_web:research' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-award"></i></div>
                                 </div>
                             </div>
@@ -581,7 +582,6 @@
                                     <h6><i class="flaticon-star"></i><span>Departments</span><i class="flaticon-star"></i></h6>
                                     <h2>Explore Our Departments</h2>
                                     <div class="title-shape"></div>
-                                    <a href="#" class="links">All Departments<i class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -589,7 +589,7 @@
                             <div class="service-block-one wow fadeInRight animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:finance' %}">Finance Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="#{% url 'nimr_web:finance' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-budget"></i></div>
                                 </div>
                             </div>
@@ -598,7 +598,7 @@
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:pmu' %}">Procurement Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="{% url 'nimr_web:pmu' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-booking"></i></div>
                                 </div>
                             </div>
@@ -608,7 +608,7 @@
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:monitoring' %}">Monitoring & Control
                                         Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="{% url 'nimr_web:monitoring' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-analytics"></i></div>
                                 </div>
                             </div>
@@ -617,7 +617,7 @@
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="400ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:hritd' %}">HRITD Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="{% url 'nimr_web:hritd' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-school"></i></div>
                                 </div>
                             </div>
@@ -626,7 +626,7 @@
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <h4><a href="{% url 'nimr_web:lab' %}">Laboratory Department</a></h4>
-                                    <div class="btn-box"><a href="#">More</a></div>
+                                    <div class="btn-box"><a href="{% url 'nimr_web:lab' %}">More</a></div>
                                     <div class="icon-box"><i class="flaticon-hospital"></i></div>
                                 </div>
                             </div>
@@ -657,9 +657,7 @@
                         <div class="schedule-tab">
                             <div class="tab-btn-box">
                                 <ul class="tab-btns schedule-tab-btns clearfix">
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-1">Upcoming Events</li>
-                                    <li class="p-tab-btn" data-tab="#tab-2">Upcoming Metings</li>
-                                    <li class="p-tab-btn" data-tab="#tab-3">Community Calendar</li>
+                                    <li class="p-tab-btn active-btn" data-tab="#tab-1">News & Announcements</li>
                                 </ul>
                             </div>
                             <div class="inner-content">
@@ -685,87 +683,21 @@
                                                 <div class="two-column-carousel owl-carousel owl-theme owl-dots-none">
                                                     <div class="schedule-block-one">
                                                         <div class="inner-box">
-
                                                             <div class="lower-content">
                                                                 <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>3.00 pm - 4.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>Heaton Park, Mt Road M25 2SW</li>
+                                                                    <li><i class="flaticon-newspaper"></i>Heaton Park, Mt Road M25 2SW</li>
                                                                 </ul>
                                                                 <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="schedule-block-one">
                                                         <div class="inner-box">
-
                                                             <div class="lower-content">
                                                                 <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
+                                                                    <li><i class="flaticon-newspaper"></i>Heaton Park, Mt Road M25 2SW</li>
                                                                 </ul>
                                                                 <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="p-tab" id="tab-2">
-                                                <div class="two-column-carousel owl-carousel owl-theme owl-dots-none">
-                                                    <div class="schedule-block-one">
-                                                        <div class="inner-box">
-
-                                                            <div class="lower-content">
-                                                                <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>3.00 pm - 4.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>Heaton Park, Mt Road M25 2SW</li>
-                                                                </ul>
-                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="schedule-block-one">
-                                                        <div class="inner-box">
-
-                                                            <div class="lower-content">
-                                                                <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
-                                                                </ul>
-                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="p-tab" id="tab-3">
-                                                <div class="two-column-carousel owl-carousel owl-theme owl-dots-none">
-                                                    <div class="schedule-block-one">
-                                                        <div class="inner-box">
-
-                                                            <div class="lower-content">
-                                                                <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>3.00 pm - 4.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>Heaton Park, Mt Road M25 2SW</li>
-                                                                </ul>
-                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="schedule-block-one">
-                                                        <div class="inner-box">
-
-                                                            <div class="lower-content">
-                                                                <ul class="post-info clearfix">
-                                                                    <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
-                                                                    <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
-                                                                </ul>
-                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
-                                                                <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -954,10 +886,10 @@
                                 <div class="inner-box">
                                     <div class="upper">
                                         <div class="icon-box"><i class="flaticon-edit"></i></div>
-                                        <h4>Register Your Complaint</h4>
+                                        <h4>Get In Touch</h4>
                                     </div>
-                                    <p>Here you can report an issues and make requests.</p>
-                                    <a href="#">Report Now</a>
+                                    <p>Please leave us your comments or suggestions.</p>
+                                    <a href="{% url 'nimr_web:contact' %}">Contact Us Now</a>
                                 </div>
                             </div>
                         </div>
@@ -968,12 +900,12 @@
                 <div class="auto-container">
                     <div class="bottom-inner clearfix">
                         <div class="copyright pull-left">
-                            <p>&copy; {% now "Y" %} By <a href="#">Muhimbili Medical Research Centre</a> All Rights Reserved. </p>
+                            <strong><p>&copy; {% now "Y" %} By <a href="#">Muhimbili Medical Research Centre</a> All Rights Reserved. </p></strong>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
-                            <li><a href="#">FAQ’s</a></li>
-                            <li><a href="http://www.nimr.or.tz/">NIMR </a></li>
-                            <li><a href="https://www.moh.go.tz/">Ministry Of Health</a></li>
+                            <li><strong><a href="https://mail.nimr.or.tz/">STAFF MAILS</a></strong></li>
+                            <li><strong><a href="http://www.nimr.or.tz/">NIMR HQ</a></strong></li>
+                            <li><strong><a href="https://www.moh.go.tz/">Ministry Of Health</a></strong></li>
                         </ul>
                     </div>
                 </div>
